<resources>
    <string name="app_name">TakeMe</string>
    <string name="nav_home_btn1">Favorites</string>
    <string name="nav_home_btn2">Map</string>
    <string name="nav_home_btn3">Profile</string>
    <string name="sheet_home_search_hint">Where to?</string>
    <string name="check_route_service_description">This service alerts when you get out of presented route</string>
    <string name="btn_cancel_route">End route</string>
    <string name="btn_map_forecast">See the forecast</string>
    <string name="txt_arrived_to_destination_screen">Congrats! You have arrived to your destination.</string>
    <string name="fav_card_start_location">Start Location</string>
    <string name="fav_card_end_location">End Location</string>
    <string name="fab_favourite_button">Add to favourite button</string>
    <string name="txt_card_title">If you liked this route, add it to your favorites!</string>
    <string name="name_route_hint">Name your starting point</string>
    <string name="my_favorite_routes_title">My Favorite routes</string>
    <string name="my_profile_title">My Profile</string>
    <string name="content_desc_user_profile_pic">User profile pic</string>
    <string name="profile_screen_title">Profile Settings</string>
    <string name="general_card_title">General</string>
    <string name="fake_name">Scarlett Davis</string>
    <string name="fake_email">scarlettdavis@gmail.com</string>
    <string name="preferences_title">Preferences</string>
    <string name="profile_settings_edit_profile">Edit Profile</string>
    <string name="profile_settings_edit_profile_details">Change profile picture, number, E-mail</string>
    <string name="profile_settings_change_password">Change Password</string>
    <string name="profile_settings_change_password_details">Update and strengthen account security</string>
    <string name="profile_settings_terms_of_use">Terms of Use</string>
    <string name="profile_settings_terms_of_use_details">Protect your account now</string>
    <string name="profile_settings_add_card">Add Card</string>
    <string name="profile_settings_add_card_details">Securely add payment method</string>
    <string name="profile_settings_notification">Notification</string>
    <string name="profile_settings_notification_details">Customize your notifications preferences</string>
    <string name="profile_settings_faq">FAQ</string>
    <string name="profile_settings_faq_details">Common questions about us</string>
    <string name="profile_settings_logout">Log Out</string>
    <string name="profile_settings_logout_details">Securely log out of Account</string>
    <string name="application_icon_description">Application TakeMe icon</string>
    <string name="user_login_textfield">Email: example@example.com</string>
    <string name="password_login_textfield">Password</string>
    <string name="remind_me_login_checkbox">Remind me!</string>
    <string name="forgot_password_login_button">Forgot Password?</string>
    <string name="loginbtn_login_button">Login</string>
    <string name="don_t_have_an_account_login_txt">Don\'t have an account?</string>
    <string name="sign_up_login_button">Sign Up</string>
    <string name="skip_for_now_login_button">Skip for now</string>
    <string name="search_result_failed">We could not find such place</string>
    <string name="signup_fragment_title">SignUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_signup_message">Welcome!</string>

</resources>