<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_save_fav_route"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    android:layout_margin="24dp"
    app:strokeColor="@color/md_theme_light_primaryContainer"
    app:strokeWidth="1dp"
    style="?attr/materialCardViewElevatedStyle"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">
        <TextView
            android:id="@+id/txt_fav_card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txt_fav_card_start_location"
            android:text="Date"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/txt_fav_card_title"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txt_fav_card_start_location"
            android:text="@string/txt_card_title"
            android:textSize="20sp"
            />
        <ImageView
            android:id="@+id/icon_start_location"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingEnd="14dp"
            android:src="@drawable/fav_card_starting_point"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_fav_card_start_location"
            app:layout_constraintTop_toBottomOf="@id/txt_fav_card_title"
            app:layout_constraintBottom_toTopOf="@id/icon_destination"/>
        <TextView
            android:id="@+id/txt_fav_card_start_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fav_card_start_location"
            app:layout_constraintStart_toEndOf="@id/icon_start_location"
            app:layout_constraintEnd_toStartOf="@id/btn_fav_route"
            app:layout_constraintTop_toBottomOf="@id/txt_fav_card_title"
            app:layout_constraintBottom_toTopOf="@id/txt_fav_card_finish_location"/>
        <ImageView
            android:id="@+id/icon_destination"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingEnd="14dp"
            android:src="@drawable/fav_card_destination_point"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_fav_card_finish_location"
            app:layout_constraintTop_toBottomOf="@id/icon_start_location"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/txt_fav_card_finish_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fav_card_end_location"
            app:layout_constraintStart_toEndOf="@id/icon_destination"
            app:layout_constraintEnd_toStartOf="@id/btn_fav_route"
            app:layout_constraintTop_toBottomOf="@id/txt_fav_card_start_location"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fav_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/fab_favourite_button"
            android:foregroundGravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_fav_card_start_location"
            app:layout_constraintTop_toBottomOf="@id/txt_fav_card_title"
            app:srcCompat="@drawable/not_fav_route"
            app:tint="@null" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
